<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageDetails"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/burger_king" />

            <TextView
                android:id="@+id/nameDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/food_order"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/sub"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/presence_busy" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="41dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text='@string/experience_the_mouthwatering_burger_king_fresh_veggies_melted_cheese_and_creamy_sauce' />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_backgraound"
                    android:hint="@string/your_name"
                    android:inputType="text"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_backgraound"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/priceDetail"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="2dp"
                        android:text="@string/s"
                        android:textColor="#CB1111"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/priceDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="#CB1111"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/order_now" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
